# ai

./: README.md
chat-service/: README.md  pyproject.toml
chat-service/src/: service.py
